--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 
 <!-- Faith Section -->
-<section id="faith" class="section fade-in" style="background-image: url('images/thelastsupper.png');">
+<section id="faith" class="section fade-in" style="background-image: url('thelastsupper.png');">
   <div class="content">
     <h1>Our Faith</h1>
     <p class="quote">"I am the way, the truth, and the life."</p>
@@ -30,13 +30,13 @@
 <!-- Society Section -->
 <section id="society" class="section fade-in" style="background-color:#0b0f3a;">
   <div class="content icons">
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/babyjesus.png" alt="Baby Jesus" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/christ.png" alt="Christ" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/jesus-encaustic.png" alt="Jesus Encaustic" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/pantocrator-dome.png" alt="Pantocrator Dome" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/st-john-chrysostom-icon-708.png" alt="St. John Chrysostom" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/st-luke-icon-747.png" alt="St. Luke" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="images/stmichael.png" alt="St. Michael" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="babyjesus.png" alt="Baby Jesus" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="christ.png" alt="Christ" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="jesus-encaustic.png" alt="Jesus Encaustic" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="pantocrator-dome.png" alt="Pantocrator Dome" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="st-john-chrysostom-icon-708.png" alt="St. John Chrysostom" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="st-luke-icon-747.png" alt="St. Luke" class="icon glow"></div>
+    <div class="icon-wrapper"><div class="light-ray"></div><img src="stmichael.png" alt="St. Michael" class="icon glow"></div>
   </div>
 </section>
 
@@ -55,7 +55,7 @@
 </section>
 
 <!-- Fellowship Section -->
-<section id="fellowship" class="section fade-in" style="background-image: url('images/pantocrator-dome.png');">
+<section id="fellowship" class="section fade-in" style="background-image: url('pantocrator-dome.png');">
   <div class="content">
     <h2>Join Our Fellowship</h2>
     <a href="https://discord.gg/BvcpNasqWs" target="_blank" class="discord-btn">Join Discord</a>
