--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <!-- Faith Section -->
 <section id="faith" class="section fade-in" style="background-image: url('thelastsupper.png');">
   <div class="content">
-    <h1>Our Faith</h1>
     <p class="quote">"I am the way, the truth, and the life."</p>
   </div>
 </section>
@@ -30,13 +29,10 @@
 <!-- Society Section -->
 <section id="society" class="section fade-in" style="background-color:#0b0f3a;">
   <div class="content icons">
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="babyjesus.png" alt="Baby Jesus" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="christ.png" alt="Christ" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="jesus-encaustic.png" alt="Jesus Encaustic" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="pantocrator-dome.png" alt="Pantocrator Dome" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="st-john-chrysostom-icon-708.png" alt="St. John Chrysostom" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="st-luke-icon-747.png" alt="St. Luke" class="icon glow"></div>
-    <div class="icon-wrapper"><div class="light-ray"></div><img src="stmichael.png" alt="St. Michael" class="icon glow"></div>
+    <div class="icon-wrapper"><img src="https://www.christianiconography.info/Edited%20in%202013/Italy/sanVitPreSancLeft.hospAbraham.clipped.jpg" alt="Icon 1" class="icon glow"></div>
+    <div class="icon-wrapper"><img src="https://www.christianiconography.info/biggerFiles/trinityAugusta.jpg" alt="Icon 2" class="icon glow"></div>
+    <div class="icon-wrapper"><img src="https://www.christianiconography.info/Europe%202017/Salamanca/lastJudgmentSalamanca.smal.jpg" alt="Icon 3" class="icon glow"></div>
+    <div class="icon-wrapper"><img src="https://www.christianiconography.info/Edited%20in%202013/Italy/wayCrossCorona.oneThirdSize.jpg" alt="Icon 4" class="icon glow"></div>
   </div>
 </section>
 
