--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 <!-- Navigation -->
 <nav id="navbar">
   <ul>
-    <li><a href="#faith">Our Faith</a></li>
+    <li><a href="#home">Home</a></li>
     <li><a href="#creed">Nicene Creed</a></li>
-    <li><a href="#fellowship">Fellowship</a></li>
+    <li><a href="#mission">Mission</a></li>
+    <li><a href="#faq">FAQ</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#discord">Discord</a></li>
   </ul>
 </nav>
 
-<!-- Faith Section -->
-<section id="faith" class="section fade-in" style="background-image: url('thelastsupper.png');">
+<!-- Home Section -->
+<section id="home" class="section fade-in" style="background-image: url('images/thelastsupper.png');">
   <div class="content">
+    <h1>Welcome to Lux Christi</h1>
     <p class="quote">"I am the way, the truth, and the life."</p>
   </div>
 </section>
@@ -33,14 +37,85 @@
       We believe in one God, the Father Almighty, Maker of heaven and earth, and of all things visible and invisible.<br><br>
       And in one Lord Jesus Christ, the only-begotten Son of God, begotten of the Father before all worlds; Light of Light, very God of very God; begotten, not made, being of one substance with the Father, by whom all things were made.<br><br>
       Who, for us men and for our salvation, came down from heaven, and was incarnate by the Holy Spirit of the virgin Mary, and was made man; and was crucified also for us under Pontius Pilate; He suffered and was buried; and the third day He rose again, according to the Scriptures; and ascended into heaven, and sits on the right hand of the Father; and He shall come again, with glory, to judge the quick and the dead; whose kingdom shall have no end.<br><br>
-      And we believe in the Holy Spirit, the Lord and Giver of Life, who proceeds from the Father [and the Son]; who with the Father and the Son together is worshiped and glorified; who spoke by the prophets.<br><br>
+      And we believe in the Holy Spirit, the Lord and Giver of Life, who proceeds from the Father <strong>and the Son</strong>, who with the Father and the Son together is worshiped and glorified; who spoke by the prophets.<br><br>
       And we believe one holy catholic and apostolic Church. We acknowledge one baptism for the remission of sins. We look for the resurrection of the dead, and the life of the world to come. Amen.
     </p>
+    <p class="note">We recognize the importance of this Creed both in the Catholic and Orthodox traditions. While our profession includes the Filioque, we affirm and honor the Orthodox Church’s ancient witness as well.</p>
   </div>
 </section>
 
-<!-- Fellowship Section -->
-<section id="fellowship" class="section fade-in" style="background-image: url('pantocrator-dome.png');">
+<!-- Mission Section -->
+<section id="mission" class="section fade-in" style="background-color:#0b0f3a;">
+  <div class="content">
+    <h2>Our Mission</h2>
+    <p class="mission-text">To glorify the teachings of Christ from age to age, sharing His light, truth, and love with all generations.</p>
+  </div>
+</section>
+
+<!-- FAQ Section -->
+<section id="faq" class="section fade-in" style="background-color:#fdf6e3; color:#0b0f3a;">
+  <div class="content">
+    <h2>Frequently Asked Questions</h2>
+
+    <div class="faq-item">
+      <button class="faq-question">What does “Lux Christi” mean?</button>
+      <div class="faq-answer">It is Latin for “Light of Christ.” We believe the light of Christ shines into every corner of the world, guiding us to truth and salvation.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Are you a church, denomination, or parish?</button>
+      <div class="faq-answer">No. We are a Christian fellowship centered on the Nicene Creed and the teachings of Jesus Christ.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Which Christian tradition do you follow?</button>
+      <div class="faq-answer">We affirm the universality of the Gospel. Our Creed includes the Filioque as professed in Catholic Christianity, but we also affirm the truth and faith of Orthodox Christianity and honor its witness.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Can non-Catholics or non-Orthodox join?</button>
+      <div class="faq-answer">Yes. Our focus is on the universal faith of Jesus Christ, not denominational boundaries. All who seek the light of Christ are welcome.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">How can I join?</button>
+      <div class="faq-answer">You can participate by reading, praying with us, and connecting with our fellowship on <a href="https://discord.gg/BvcpNasqWs" target="_blank">Discord</a>. Fellowship begins with faith, community, and shared prayer.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Do you require formal membership?</button>
+      <div class="faq-answer">No. Participation is open. Fellowship here is about unity in faith and truth, not paperwork or obligations.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">Do you provide sacraments?</button>
+      <div class="faq-answer">No. Sacraments belong to the life of the Church. We are a fellowship for prayer, teaching, and faith-sharing.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">What Bible translation do you recommend?</button>
+      <div class="faq-answer">We encourage the use of faithful Catholic and Orthodox translations such as the RSV-2CE, NRSV-CE, or Orthodox Study Bible.</div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-question">How do I contact you with prayer requests?</button>
+      <div class="faq-answer">You can send prayer requests through email at <a href="mailto:support@lux-christi.org">support@lux-christi.org</a>. Solomon Thazar will reach out to you soon.</div>
+    </div>
+
+  </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="section fade-in" style="background-color:#fdf6e3; color:#0b0f3a;">
+  <div class="content">
+    <h2>Contact</h2>
+    <p>Email us at: <a href="mailto:support@lux-christi.org">support@lux-christi.org</a></p>
+    <p>Solomon Thazar will reach out to you soon.</p>
+  </div>
+</section>
+
+<!-- Discord Section -->
+<section id="discord" class="section fade-in" style="background-color:#0b0f3a;">
   <div class="content">
     <h2>Join Our Fellowship</h2>
     <a href="https://discord.gg/BvcpNasqWs" target="_blank" class="discord-btn">Join Discord</a>
