--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
 <!-- Navigation -->
 <nav id="navbar">
-  <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#creed">Nicene Creed</a></li>
-    <li><a href="#mission">Mission</a></li>
-    <li><a href="#faq">FAQ</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#discord">Discord</a></li>
-  </ul>
+  <div class="nav-container">
+    <div class="nav-brand">Lux Christi</div>
+    <button class="nav-toggle" id="navToggle">&#9776;</button>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#creed">Nicene Creed</a></li>
+      <li><a href="#mission">Mission</a></li>
+      <li><a href="#faq">FAQ</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#discord">Discord</a></li>
+    </ul>
+  </div>
 </nav>
 
 <!-- Home Section -->
@@ -56,52 +60,42 @@
 <section id="faq" class="section fade-in" style="background-color:#fdf6e3; color:#0b0f3a;">
   <div class="content">
     <h2>Frequently Asked Questions</h2>
-
     <div class="faq-item">
       <button class="faq-question">What does “Lux Christi” mean?</button>
       <div class="faq-answer">It is Latin for “Light of Christ.” We believe the light of Christ shines into every corner of the world, guiding us to truth and salvation.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">Are you a church, denomination, or parish?</button>
       <div class="faq-answer">No. We are a Christian fellowship centered on the Nicene Creed and the teachings of Jesus Christ.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">Which Christian tradition do you follow?</button>
       <div class="faq-answer">We affirm the universality of the Gospel. Our Creed includes the Filioque as professed in Catholic Christianity, but we also affirm the truth and faith of Orthodox Christianity and honor its witness.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">Can non-Catholics or non-Orthodox join?</button>
       <div class="faq-answer">Yes. Our focus is on the universal faith of Jesus Christ, not denominational boundaries. All who seek the light of Christ are welcome.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">How can I join?</button>
       <div class="faq-answer">You can participate by reading, praying with us, and connecting with our fellowship on <a href="https://discord.gg/BvcpNasqWs" target="_blank">Discord</a>. Fellowship begins with faith, community, and shared prayer.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">Do you require formal membership?</button>
       <div class="faq-answer">No. Participation is open. Fellowship here is about unity in faith and truth, not paperwork or obligations.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">Do you provide sacraments?</button>
       <div class="faq-answer">No. Sacraments belong to the life of the Church. We are a fellowship for prayer, teaching, and faith-sharing.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">What Bible translation do you recommend?</button>
       <div class="faq-answer">We encourage the use of faithful Catholic and Orthodox translations such as the RSV-2CE, NRSV-CE, or Orthodox Study Bible.</div>
     </div>
-
     <div class="faq-item">
       <button class="faq-question">How do I contact you with prayer requests?</button>
       <div class="faq-answer">You can send prayer requests through email at <a href="mailto:support@lux-christi.org">support@lux-christi.org</a>. Solomon Thazar will reach out to you soon.</div>
     </div>
-
   </div>
 </section>
 
