--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <!-- Navigation -->
 <nav id="navbar">
   <div class="nav-container">
-    <div class="nav-brand">Lux Christi</div>
-    <button class="nav-toggle" id="navToggle">&#9776;</button>
-    <ul class="nav-links" id="navLinks">
+    <button class="dropdown-btn">Menu &#9662;</button>
+    <ul class="dropdown-content">
       <li><a href="#home">Home</a></li>
       <li><a href="#creed">Nicene Creed</a></li>
       <li><a href="#mission">Mission</a></li>
