--- a/index.html
+++ b/index.html
@@ -52,10 +52,38 @@
   <!-- Creed Section -->
   <section id="creed" class="fade-in">
     <h2>Creeds</h2>
-    <p><strong>Apostles' Creed:</strong></p>
-    <p>I believe in God, the Father almighty, creator of heaven and earth, and in Jesus Christ, His only Son, our Lord…</p>
-    <p><strong>Nicene Creed:</strong></p>
-    <p>We believe in one God, the Father Almighty, maker of heaven and earth, of all things visible and invisible…</p>
+
+    <div class="creed-text">
+      <p><strong>Apostles' Creed:</strong></p>
+      <p>
+        I believe in God, the Father almighty, creator of heaven and earth.  
+        I believe in Jesus Christ, His only Son, our Lord, who was conceived by the Holy Spirit,  
+        born of the Virgin Mary, suffered under Pontius Pilate, was crucified, died, and was buried;  
+        He descended into hell; on the third day He rose again from the dead;  
+        He ascended into heaven, and is seated at the right hand of God the Father almighty;  
+        from there He will come to judge the living and the dead.  
+        I believe in the Holy Spirit, the holy catholic Church, the communion of saints,  
+        the forgiveness of sins, the resurrection of the body, and the life everlasting. Amen.
+      </p>
+
+      <p><strong>Nicene Creed:</strong></p>
+      <p>
+        We believe in one God, the Father almighty, maker of heaven and earth,  
+        of all things visible and invisible. We believe in one Lord Jesus Christ,  
+        the only Son of God, eternally begotten of the Father, God from God, Light from Light,  
+        true God from true God, begotten, not made, of one Being with the Father;  
+        through Him all things were made. For us and for our salvation He came down from heaven,  
+        was incarnate by the Holy Spirit of the Virgin Mary, and became man.  
+        For our sake He was crucified under Pontius Pilate; He suffered death and was buried.  
+        On the third day He rose again in accordance with the Scriptures; He ascended into heaven  
+        and is seated at the right hand of the Father. He will come again in glory to judge the living and the dead,  
+        and His kingdom will have no end.  
+        We believe in the Holy Spirit, the Lord, the giver of life, who proceeds from the Father and the Son,  
+        who with the Father and the Son is worshiped and glorified, who has spoken through the prophets.  
+        We believe in one holy catholic and apostolic Church. We acknowledge one baptism for the forgiveness of sins.  
+        We look for the resurrection of the dead, and the life of the world to come. Amen.
+      </p>
+    </div>
   </section>
 
   <!-- Contact Section -->
