--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
   </section>
 
   <!-- Pantocrator Section -->
-  <section id="pantocrator" class="pantocrator-section fade-in">
+  <section id="pantocrator" class="fade-in content-section">
     <img src="pantocrator-dome.png" alt="Pantocrator">
   </section>
 
   <!-- Our Mission Section -->
-  <section id="mission" class="fade-in">
+  <section id="mission" class="fade-in content-section">
     <h2>Our Mission</h2>
     <p>To glorify Christ in all things for all time.</p>
   </section>
 
   <!-- FAQ Section -->
-  <section id="faq" class="fade-in">
+  <section id="faq" class="fade-in content-section">
     <h2>FAQ</h2>
     <p><strong>Who we are:</strong> Sanctus Lux Christi is a Christian fellowship devoted to glorifying Christ in all things.</p>
     <p><strong>Our mission:</strong> To proclaim Christ through teaching, fellowship, and worship.</p>
@@ -50,7 +50,7 @@
   </section>
 
   <!-- Creed Section -->
-  <section id="creed" class="fade-in">
+  <section id="creed" class="fade-in content-section">
     <h2>Creeds</h2>
     <div class="creed-text">
       <p><strong>Apostles' Creed:</strong></p>
@@ -86,14 +86,14 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="fade-in">
+  <section id="contact" class="fade-in content-section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:support@lux-christi.org">support@lux-christi.org</a></p>
     <p>Solomon Thazar will be in touch soon.</p>
   </section>
 
   <!-- Discord Section -->
-  <section id="discord" class="fade-in">
+  <section id="discord" class="fade-in content-section">
     <h2>Join Our Discord</h2>
     <a href="https://discord.gg/BvcpNasqWs" class="discord-btn" target="_blank">Sanctus Lux Christi Discord</a>
   </section>
