--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
   </nav>
 
   <!-- Home Section -->
-  <section id="home" class="home-section fade-in">
-    <div class="home-text">
-      <h1>I am the way, the truth, and the life</h1>
-    </div>
-  </section>
+  <section id="home" class="home-section fade-in"></section>
 
   <!-- Pantocrator Section -->
   <section id="pantocrator" class="fade-in content-section">
